--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ header {
     background-color: #8fcaed;
 }
 
+.section {
+    padding-top: 4vw;
+    padding-bottom: 4vw;
+}
+
 .section-title {
     color: #044368;
 }
