--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ header {
     padding-top: 50px;
   }
 
+  .head-wrapper p {
+      font-size: 45px;
+  }
+
 
 #side-image {
     height: 230px;
@@ -49,7 +53,7 @@ header {
     width: 100%;
 }
 
-.service-offering {
+.service-offering, .contact-wrapper {
     padding-top: 3vw;
     padding-bottom: 3vw;
 }
